# Lobooooooo14

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.easter/: bom dia bom dia.py
.github/workflows/: auto-readme.yml  cobrinha.yml  custom-profile.yml  metrics.yml  snake.yml
assets/: blacklist.txt  codes.json  readme_template.md
assets/auto-readme/: TEMPLATE.md  codes.json
src/: __init__.py
src/modules/: __init__.py  contributions.py  contributions_calendar.py  contributions_connection.py  followers.py  languages.py  page_info.py  repositories.py  repositories_contributed_to.py  repository.py  user.py  viewer.py
src/queries/: followers.graphql  viewer.graphql
src/services/: __init__.py  ai_service.py  gemini_service.py  generator_service.py  generators.py  github_service.py
src/utils/: __init__.py  dates.py  formatters.py  gets.py  images.py  resolvers.py
workflows/: cobrinha.yml
