[tool.poetry]
name = "lobooooooo14"
version = "0.1.0"
description = ""
authors = ["Lobooooooo14 <88998991+Lobooooooo14@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
rich = "^13.9.4"
types-requests = "^2.32.0.20241016"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
